RESOLVED FIXED 281298
[WPE] REGRESSION(284269@main): Inspector crashes due to missing GRefPtr specialization for GResource
https://bugs.webkit.org/show_bug.cgi?id=281298
Summary [WPE] REGRESSION(284269@main): Inspector crashes due to missing GRefPtr speci...
Adrian Perez
Reported 2024-10-11 05:54:22 PDT
Relevant backtrace: #0 g_type_check_instance_is_fundamentally_a (type_instance=0x64b244c602e0, fundamental_type=0x50) at ../glib/gobject/gtype.c:4153 #1 0x00007aadfe8fdf20 in g_object_unref (_object=0x64b244c602e0) at ../glib/gobject/gobject.c:4327 #2 0x00007aadfb18507d in WTF::derefGPtr<_GResource> (ptr=0x64b244c602e0) at WTF/Headers/wtf/glib/GRefPtr.h:272 #3 WTF::GRefPtr<_GResource>::~GRefPtr (this=<optimized out>) at WTF/Headers/wtf/glib/GRefPtr.h:82 #4 Inspector::backendCommands()::$_0::operator()() const (this=<optimized out>) at ../Source/JavaScriptCore/inspector/remote/glib/RemoteInspectorUtils.cpp:58 #5 std::__invoke_impl<void, Inspector::backendCommands()::$_0>(std::__invoke_other, Inspector::backendCommands()::$_0&&) (__f=<optimized out>) at '/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../include/c++/14.2.1/bits/invoke.h:61 #6 std::__invoke<Inspector::backendCommands()::$_0>(Inspector::backendCommands()::$_0&&) (__fn=<optimized out>) at /usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../include/c++/14.2.1/bits/invoke.h:96 #7 std::call_once<Inspector::backendCommands()::$_0>(std::once_flag&, Inspector::backendCommands()::$_0&&)::{lambda()#1}::operator()() const (this=<optimized out>) at /usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../include/c++/14.2.1/mutex:909 Notice how in frame #1 there's a g_object_unref() call, and an internal type check fails. Opening a core dump in a debugger shows that the pointer in question is that of the GResource instance for the inspector resource files.
Attachments
Adrian Perez
Comment 1 2024-10-11 06:04:25 PDT
EWS
Comment 2 2024-10-11 13:42:36 PDT
Committed 285035@main (b076eff3f70e): <https://commits.webkit.org/285035@main> Reviewed commits have been landed. Closing PR #35037 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-11 13:43:49 PDT
Note You need to log in before you can comment on or make changes to this bug.