[WPE] REGRESSION(284269@main): Inspector crashes due to missing GRefPtr specialization for GResource https://bugs.webkit.org/show_bug.cgi?id=281298

Reviewed by Michael Catanzaro.

Add template specializations to make GRefPtr<GResource> use g_resource_{ref,unref}.
This is needed because GResource is not a GObject subclass, therefore using the
generic implementation of the template picked g_object_{ref,unref} instead and
the internal GLib sanity checks failed.

* Source/WTF/wtf/glib/GRefPtr.cpp:
(WTF::refGPtr): Added specialization for GResource.
(WTF::derefGPtr): Ditto.
* Source/WTF/wtf/glib/GRefPtr.h: Add template specialization declarations.
* Source/WTF/wtf/glib/GTypedefs.h: Add forward-declaration for GResource.

Canonical link: https://commits.webkit.org/285035@main